# Calf

./: .editorconfig  .gitignore  404.html  README.md  build.gradle.kts  gradle.properties  index.html  mkdocs.yml  renovate.json  settings.gradle.kts  sitemap.xml
calf-camera-picker/: build.gradle.kts
calf-core/: build.gradle.kts
calf-cupertino-icons/: build.gradle.kts
calf-file-picker/: build.gradle.kts
calf-file-picker-coil/: build.gradle.kts
calf-file-picker/native/: Cargo.toml  build-all-targets.sh
calf-file-picker/native/src/: lib.rs
calf-geo/: build.gradle.kts
calf-io/: build.gradle.kts
calf-javafx-webview/: build.gradle.kts
calf-maps/: build.gradle.kts
calf-media/: build.gradle.kts
calf-navigation/: build.gradle.kts
calf-notifications/: build.gradle.kts
calf-permissions/: build.gradle.kts
calf-sf-symbols/: build.gradle.kts
calf-share/: build.gradle.kts
calf-share/native/: Cargo.toml
calf-share/native/src/: lib.rs
calf-ui/: build.gradle.kts
calf-ui-webview/: build.gradle.kts
calf-web-view/: build.gradle.kts
calf-webview/: build.gradle.kts
code_of_conduct/: index.html
convention-plugins/: build.gradle.kts  settings.gradle.kts
docs/: code_of_conduct.md  filepicker.md  index.md  installation.md  permissions.md  sf-symbols.md  share.md  ui.md  webview.md
filepicker/: index.html
gradle/: gradle-daemon-jvm.properties  libs.versions.toml
installation/: index.html
permissions/: index.html
search/: search_index.json
sf-symbols/: index.html
share/: index.html
ui/: index.html
webview/: index.html
(+582 files in other folders)
