[package]
name = "calf-share-native"
version = "0.11.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
jni = "0.21"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSURL", "NSArray", "NSObject", "NSThread"] }
objc2-app-kit = { version = "0.3", features = ["NSWindow", "NSView", "NSResponder", "NSSharingService", "NSEvent", "NSApplication", "NSRunningApplication"] }
block2 = "0.6"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
